tests/baselines/reference/ES5For-of12.errors.txt
tests/cases/conformance/statements/for-ofStatements/ES5For-of12.ts(1,7): error TS2364: Invalid left-hand side of assignment expression.


==== tests/cases/conformance/statements/for-ofStatements/ES5For-of12.ts (1 errors) ====
    for ([""] of [[""]]) { }
          ~~
!!! error TS2364: Invalid left-hand side of assignment expression.